Subo actualizaciones de CSS

--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
   <!--------------------------------------------------------------------------------- Seccion bienvenida ------------------------------------------------------------------------------------>
 
 
-  <div class="contenedor-libro aparecer">
-
+  <div class="contenedor-libro">
     <div class="contenedor-titulo">
       <h1 class="bienvenido">¡Bienvenido, Aficionado a la lectura!</h1>
       <h2 class="titulo">Te invitamos a unirte a nosotros y sumergirte en esta emocionante aventura literaria.
@@ -60,6 +59,7 @@
     <!--<div class="imagen-contenedor-bienvenido">
           <img class="imagen2" src="../img/Lectura.jpg" alt="Bienvenido">
         </div>-->
+      </section>
   </div>
 
   <!------------------------------------------------------------------------------------ Seccion Autor  ------------------------------------------------------------------------------------->
