--- a/pages/home.html
+++ b/pages/home.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/estilos.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Rubik&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <title>Home</title>
 </head>
 
@@ -17,13 +19,15 @@
     <nav>
       <ul class="nav">
         <li><a href="../index.html">Home</a></li>
-        <li><a href="./pages/blog.html">Blog</a></li>
-        <li><a href="./pages/desafios.html">Desafíos</a></li>
-        <li><a href="./pages/lecturas.html">Lecturas</a></li>
+        <li><a href="../pages/blog.html">Blog</a></li>
+        <li><a href="../pages/desafios.html">Desafíos</a></li>
+        <li><a href="../pages/lecturas.html">Lecturas</a></li>
         <li><a href="./pages/contacto.html">Contacto</a></li>
+        <li class="social-icon"><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li>
+        <li class="social-icon"><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
+        <li class="social-icon"><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
       </ul>
     </nav>
-
   </header>
   <!------------------------------------------------------------------------ Header ------------------------------------------------------------------------>
 
