--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Rubik&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 
 </head>
@@ -17,35 +18,30 @@
 <!---------------------------------------------------------------------------------------- Header -------------------------------------------------------------------------------------------->
 
 <header>
-
   <img src="../img/logo.jpg" alt="logo">
   <nav>
-
     <ul class="nav">
       <li><a href="../index.html">Home</a></li>
-      <li><a href="./pages/blog.html">Blog</a></li>
-      <li><a href="./pages/desafios.html">Desafíos</a></li>
-      <li><a href="./pages/lecturas.html">Lecturas</a></li>
-      <li><a href="./pages/contacto.html">Contacto</a></licl>
+      <li><a href="../pages/blog.html">Blog</a></li>
+      <li><a href="../pages/desafios.html">Desafíos</a></li>
+      <li><a href="../pages/lecturas.html">Lecturas</a></li>
+      <li><a href="./pages/contacto.html">Contacto</a></li>
+      <li class="social-icon"><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li>
+      <li class="social-icon"><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
+      <li class="social-icon"><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
     </ul>
-
   </nav>
-
-
-  </div>
 </header>
+
+
 
 
 <!---------------------------------------------------------------------------------------- Header -------------------------------------------------------------------------------------------->
 
-
-<!------------------------------------------------------------------------------------- Main ---------------------------------------------------------------------------------------------------------------->
-
-<body>
   <!--------------------------------------------------------------------------------- Seccion bienvenida ------------------------------------------------------------------------------------>
-
-
-  <div class="contenedor-libro">
+  <body>
+<section class="contenedor-bienvenida">
+  <div class="contenedor-libro-bienvenida">
     <div class="contenedor-titulo">
       <h1 class="bienvenido">¡Bienvenido, Aficionado a la lectura!</h1>
       <h2 class="titulo">Te invitamos a unirte a nosotros y sumergirte en esta emocionante aventura literaria.
@@ -59,9 +55,8 @@
     <!--<div class="imagen-contenedor-bienvenido">
           <img class="imagen2" src="../img/Lectura.jpg" alt="Bienvenido">
         </div>-->
-    </section>
   </div>
-
+</section>
   <!------------------------------------------------------------------------------------ Seccion Autor  ------------------------------------------------------------------------------------->
 
   <div class="contenedor-aparecer-autor1">
@@ -104,7 +99,6 @@
   </div>
 
 
-  <!---------------------------------------------------------------------------------- Main -------------------------------------------------------------------------------------------------->
 
   <!--------------------------------------------------------------------------------- Footer ------------------------------------------------------------------------------------------>
 
