--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -21,7 +21,7 @@
         <li><a href="../pages/blog.html">Blog</a></li>
         <li><a href="../pages/desafios.html">Desafíos</a></li>
         <li><a href="../pages/lecturas.html">Lecturas</a></li>
-        <li><a href="./pages/contacto.html">Contacto</a></li>
+        <li><a href="../pages/contacto.html">Contacto</a></li>
         <li class="social-icon"><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li>
         <li class="social-icon"><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
         <li class="social-icon"><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
