--- a/index.html
+++ b/index.html
@@ -1,30 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SmartBook</title>
+  <title>SmartBook - Blog de Libros: Reseñas, Recomendaciones y Noticias Literarias</title>
+  <meta name="description"
+    content="Bienvenido a SmartBook, un blog sobre libros donde encontrarás reseñas, recomendaciones y noticias del mundo literario. Descubre nuevas lecturas y comparte tus opiniones con otros amantes de los libros.">
+  <meta name="keywords" content="libros, reseñas, recomendaciones, noticias literarias, lecturas, blog literario">
+
+  <meta property="og:title" content="SmartBook - Blog de Libros">
+  <meta property="og:description"
+    content="Bienvenido a SmartBook, un blog sobre libros donde encontrarás reseñas, recomendaciones y noticias del mundo literario. Descubre nuevas lecturas y comparte tus opiniones con otros amantes de los libros.">
+  <meta property="og:url" content="https://pre-entrega3-franz-34hk-l5swa8wwc-walter-wf.vercel.app/index.html">
+
+  <!-- Estilos CSS -->
   <link rel="stylesheet" href="./css/estilos.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
+  <!-- Fuente de Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Rubik&display=swap" rel="stylesheet">
+
+  <!-- Iconos de Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 
 <!---------------------------------------------------------------------------------------- Header -------------------------------------------------------------------------------------------->
 
 <header>
-  <img src="../img/logo.jpg" alt="logo">
+  <img src="./img/logo.jpg" alt="logo">
   <nav>
     <ul class="nav">
-      <li><a href="../index.html">Home</a></li>
-      <li><a href="../pages/blog.html">Blog</a></li>
-      <li><a href="../pages/desafios.html">Desafíos</a></li>
-      <li><a href="../pages/lecturas.html">Lecturas</a></li>
+      <li><a href="./index.html">Home</a></li>
+      <li><a href="./pages/blog.html">Blog</a></li>
+      <li><a href="./pages/desafios.html">Desafíos</a></li>
+      <li><a href="./pages/lecturas.html">Lecturas</a></li>
       <li><a href="./pages/contacto.html">Contacto</a></li>
       <li class="social-icon"><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li>
       <li class="social-icon"><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
@@ -38,25 +51,24 @@
 
 <!---------------------------------------------------------------------------------------- Header -------------------------------------------------------------------------------------------->
 
-  <!--------------------------------------------------------------------------------- Seccion bienvenida ------------------------------------------------------------------------------------>
-  <body>
-<section class="contenedor-bienvenida">
-  <div class="contenedor-libro-bienvenida">
-    <div class="contenedor-titulo">
-      <h1 class="bienvenido">¡Bienvenido, Aficionado a la lectura!</h1>
-      <h2 class="titulo">Te invitamos a unirte a nosotros y sumergirte en esta emocionante aventura literaria.
-        Descubre libros fascinantes que se ajusten a cada categoría, comparte tus experiencias de lectura y
-        disfruta de la satisfacción de tacharlos de la lista.</h2>
-      <div class="botones">
-        <button class="btn-challenge" type="submit">Desafío 2022</button>
-        <button class="btn-challenge" type="submit">Desafío 2023</button>
+<!--------------------------------------------------------------------------------- Seccion bienvenida ------------------------------------------------------------------------------------>
+
+<body>
+  <section class="contenedor-bienvenida">
+    <div class="contenedor-libro-bienvenida">
+      <div class="contenedor-titulo">
+        <h1 class="bienvenido">¡Bienvenido, Aficionado a la lectura!</h1>
+        <h2 class="titulo">Te invitamos a unirte a nosotros y sumergirte en esta emocionante aventura literaria.
+          Descubre libros fascinantes que se ajusten a cada categoría, comparte tus experiencias de lectura y
+          disfruta de la satisfacción de tacharlos de la lista.</h2>
+        <div class="botones">
+          <button class="btn-challenge" type="submit">Desafío 2022</button>
+          <button class="btn-challenge" type="submit">Desafío 2023</button>
+        </div>
       </div>
+
     </div>
-    <!--<div class="imagen-contenedor-bienvenido">
-          <img class="imagen2" src="../img/Lectura.jpg" alt="Bienvenido">
-        </div>-->
-  </div>
-</section>
+  </section>
   <!------------------------------------------------------------------------------------ Seccion Autor  ------------------------------------------------------------------------------------->
 
   <div class="contenedor-aparecer-autor1">
