--- a/pages/blog.html
+++ b/pages/blog.html
@@ -5,12 +5,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="Bienvenido al blog sobre libros, donde encontrarás reseñas, recomendaciones y noticias sobre tus autores favoritos.">
+  <meta name="keywords"
+    content="libros, blog de libros, reseñas de libros, recomendaciones de libros, noticias literarias, autores famosos">
+  <link rel="canonical" href="https://pre-entrega3-franz-34hk-l5swa8wwc-walter-wf.vercel.app/pages/blog.html">
+  <meta property="og:title" content="Blog de Libros">
+  <meta property="og:description"
+    content="Bienvenido al blog sobre libros, donde encontrarás reseñas, recomendaciones y noticias sobre tus autores favoritos.">
   <link rel="stylesheet" href="../css/estilos.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Rubik&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
-
-  <title>Blog</title>
+  <title>Blog de Libros</title>
+</head>
 
 
 
@@ -27,7 +34,7 @@
         <li><a href="../pages/blog.html">Blog</a></li>
         <li><a href="../pages/desafios.html">Desafíos</a></li>
         <li><a href="../pages/lecturas.html">Lecturas</a></li>
-        <li><a href="./pages/contacto.html">Contacto</a></li>
+        <li><a href="../pages/contacto.html">Contacto</a></li>
         <li class="social-icon"><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li>
         <li class="social-icon"><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
         <li class="social-icon"><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
@@ -45,29 +52,36 @@
         <div class="col-lg-6 col-md-8 col-sm-12">
           <div class="entrada">
             <h2 class="titulo">Leimos "Juego de Tronos"</h2>
-            <p class="contenido">Juego de Tronos (título original en inglés: A Game of Thrones) es una novela de fantasía escrita por el autor 
-              estadounidense George R. R. Martin en agosto de 1996. Fue publicada en español por Ediciones Gigamesh en octubre de 2002.
+            <p class="contenido">Juego de Tronos (título original en inglés: A Game of Thrones) es una novela de
+              fantasía escrita por el autor
+              estadounidense George R. R. Martin en agosto de 1996. Fue publicada en español por Ediciones Gigamesh en
+              octubre de 2002.
 
-              Esta actúa como primer capitulo de la serie de gran popularidad Canción de Hielo y Fuego. 
-              </p>
+              Esta actúa como primer capitulo de la serie de gran popularidad Canción de Hielo y Fuego.
+            </p>
             <a class="custom-button" href="#">Leer más</a>
           </div>
         </div>
         <div class="col-lg-1 col-md-2 col-sm-12">
           <div class="entrada">
             <h2 class="titulo">Leimos "The Witcher"</h2>
-            <p class="contenido">Un brujo (Lengua Antigua: vatt'ghern) es un individuo que ha pasado por un extensivo entrenamiento y misteriosos 
-              rituales (que se llevan a cabo en "escuelas de brujos" como Kaer Morhen) con el fin de convertirlo en un cazador de monstruos errante a sueldo. 
-              De Geralt, el personaje principal de la Saga del 
-              brujo de Andrzej Sapkowski y de los juegos basados en ella, se dice que es uno de los mejores brujos que existen</p>
+            <p class="contenido">Un brujo (Lengua Antigua: vatt'ghern) es un individuo que ha pasado por un extensivo
+              entrenamiento y misteriosos
+              rituales (que se llevan a cabo en "escuelas de brujos" como Kaer Morhen) con el fin de convertirlo en un
+              cazador de monstruos errante a sueldo.
+              De Geralt, el personaje principal de la Saga del
+              brujo de Andrzej Sapkowski y de los juegos basados en ella, se dice que es uno de los mejores brujos que
+              existen</p>
             <a class="custom-button" href="#">Leer más</a>
           </div>
         </div>
         <div class="col-lg-2 col-md-2 col-sm-12">
           <div class="entrada">
             <h2 class="titulo">Leimos "Obras De Lovecraft"</h2>
-            <p class="contenido">Su estilo literario es inconfundible y muy personal. Lo caracteriza el exceso de palabras polisílabas y de adjetivos cultos como «atávico», 
-              «numinoso», «inmemorial», «arcano».12​ Su tono siempre serio y solemne ha sido copiado en innumerables ocasiones por muchos escritores de terror como, por ejemplo, 
+            <p class="contenido">Su estilo literario es inconfundible y muy personal. Lo caracteriza el exceso de
+              palabras polisílabas y de adjetivos cultos como «atávico»,
+              «numinoso», «inmemorial», «arcano».12​ Su tono siempre serio y solemne ha sido copiado en innumerables
+              ocasiones por muchos escritores de terror como, por ejemplo,
               por los autores del Círculo de Lovecraft. </p>
             <a class="custom-button" href="#">Leer más</a>
           </div>
@@ -75,8 +89,9 @@
         <div class="col-lg-1 col-md-0 col-sm-12">
           <div class="entrada">
             <h2 class="titulo">Leimos "Mass Effect"</h2>
-            <p class="contenido">El juego tiene lugar en el año 2183, donde el jugador asume el papel del Comandante Shepard,
-               líder de un escuadron de élite a bordo de la nave prototipo SSV Normandy (o Normandia en español). 
+            <p class="contenido">El juego tiene lugar en el año 2183, donde el jugador asume el papel del Comandante
+              Shepard,
+              líder de un escuadron de élite a bordo de la nave prototipo SSV Normandy (o Normandia en español).
               La historia principal gira en torno a salvar a la Galaxia de una amenaza inminente.</p>
             <a class="custom-button" href="#">Leer más</a>
           </div>
