--- a/pages/home.html
+++ b/pages/home.html
@@ -4,25 +4,47 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../css/estilos.css">
+  <title>SmartBook - Blog de Libros: Reseñas, Recomendaciones y Noticias Literarias</title>
+  <meta name="description"
+    content="Bienvenido a SmartBook, un blog sobre libros donde encontrarás reseñas, recomendaciones y noticias del mundo literario. Descubre nuevas lecturas y comparte tus opiniones con otros amantes de los libros.">
+  <meta name="keywords" content="libros, reseñas, recomendaciones, noticias literarias, lecturas, blog literario">
+
+  <!-- Etiquetas Open Graph (OG) para compartir en redes sociales -->
+  <meta property="og:title" content="SmartBook - Blog de Libros">
+  <meta property="og:description"
+    content="Bienvenido a SmartBook, un blog sobre libros donde encontrarás reseñas, recomendaciones y noticias del mundo literario. Descubre nuevas lecturas y comparte tus opiniones con otros amantes de los libros.">
+  <meta property="og:url" content="https://pre-entrega3-franz-34hk-l5swa8wwc-walter-wf.vercel.app/index.html">
+
+  <!-- Favicon -->
+  <link rel="icon" href="./favicon.ico" type="image/x-icon">
+
+  <!-- Estilos CSS -->
+  <link rel="stylesheet" href="./css/estilos.css">
+
+  <!-- Fuente de Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Rubik&display=swap" rel="stylesheet">
+
+  <!-- Iconos de Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <title>Home</title>
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
 </head>
 
 <body>
 
   <!----------------------------------------------------------------------- Header ------------------------------------------------------------------------>
   <header>
-    <img src="../img/logo.jpg" alt="logo">
+    <img src="./img/logo.jpg" alt="logo">
     <nav>
       <ul class="nav">
         <li><a href="../index.html">Home</a></li>
         <li><a href="../pages/blog.html">Blog</a></li>
         <li><a href="../pages/desafios.html">Desafíos</a></li>
         <li><a href="../pages/lecturas.html">Lecturas</a></li>
-        <li><a href="./pages/contacto.html">Contacto</a></li>
+        <li><a href="../pages/contacto.html">Contacto</a></li>
         <li class="social-icon"><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li>
         <li class="social-icon"><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
         <li class="social-icon"><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
