--- a/pages/lecturas.html
+++ b/pages/lecturas.html
@@ -5,6 +5,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content="Bienvenido al blog sobre libros, donde encontrarás reseñas, recomendaciones y noticias sobre tus autores favoritos.">
+  <meta name="keywords"
+    content="libros, blog de libros, reseñas de libros, recomendaciones de libros, noticias literarias, autores famosos">
+  <link rel="canonical" href="https://pre-entrega3-franz-34hk-l5swa8wwc-walter-wf.vercel.app/pages/blog.html">
+  <meta property="og:title" content="Blog de Libros">
+  <meta property="og:description"
+    content="Bienvenido al blog sobre libros, donde encontrarás reseñas, recomendaciones y noticias sobre tus autores favoritos.">
   <link rel="stylesheet" href="../css/estilos.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Rubik&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -21,7 +29,7 @@
         <li><a href="../pages/blog.html">Blog</a></li>
         <li><a href="../pages/desafios.html">Desafíos</a></li>
         <li><a href="../pages/lecturas.html">Lecturas</a></li>
-        <li><a href="./pages/contacto.html">Contacto</a></li>
+        <li><a href="../pages/contacto.html">Contacto</a></li>
         <li class="social-icon"><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li>
         <li class="social-icon"><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
         <li class="social-icon"><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
