--- a/pages/home.html
+++ b/pages/home.html
@@ -28,8 +28,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
+
 
 </head>
 
@@ -37,18 +39,40 @@
 
   <!----------------------------------------------------------------------- Header ------------------------------------------------------------------------>
   <header>
-    <img src="./img/logo.jpg" alt="logo">
-    <nav>
-      <ul class="nav">
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../pages/blog.html">Blog</a></li>
-        <li><a href="../pages/desafios.html">Desafíos</a></li>
-        <li><a href="../pages/lecturas.html">Lecturas</a></li>
-        <li><a href="../pages/contacto.html">Contacto</a></li>
-        <li class="social-icon"><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li>
-        <li class="social-icon"><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
-        <li class="social-icon"><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
-      </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <!-- Centrar el logo -->
+      <a class="navbar-brand mx-auto" href="#">
+        <img src="./img/logo.jpg" alt="logo">
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="../index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/blog.html">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/desafios.html">Desafíos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/lecturas.html">Lecturas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+          </li>
+        </ul>
+      </div>
+      <!-- Mover los íconos de redes sociales hacia la izquierda -->
+      <div class="ml-auto">
+        <a class="social-icon" href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+        <a class="social-icon" href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a class="social-icon" href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+      </div>
     </nav>
   </header>
   <!------------------------------------------------------------------------ Header ------------------------------------------------------------------------>
@@ -83,6 +107,12 @@
   </footer>
 
   <!------------------------------------------------------------------------ Footer ------------------------------------------------------------------------>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+
 </body>
 
 </html>
