--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
   <!-- Iconos de Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
+
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <script src="script.js"></script>
 </head>
 
 <!---------------------------------------------------------------------------------------- Header -------------------------------------------------------------------------------------------->
@@ -35,6 +37,8 @@
   <!-- Usa las clases de Bootstrap para el navbar -->
   <nav class="navbar navbar-expand-lg">
     <a class="navbar-brand" href="#">
+      <button id="mode-toggle" class="mode-toggle"><i class="fas fa-sun"></i><i class="fas fa-moon"></i></button>
+
       <img src="./img/logo.jpg" alt="logo">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
