--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,31 +1,78 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SmartBook - Blog de Libros: Reseñas, Recomendaciones y Noticias Literarias</title>
+  <meta name="description"
+    content="Bienvenido a SmartBook, un blog sobre libros donde encontrarás reseñas, recomendaciones y noticias del mundo literario. Descubre nuevas lecturas y comparte tus opiniones con otros amantes de los libros.">
+  <meta name="keywords" content="libros, reseñas, recomendaciones, noticias literarias, lecturas, blog literario">
+
+  <meta property="og:title" content="SmartBook - Blog de Libros">
+  <meta property="og:description"
+    content="Bienvenido a SmartBook, un blog sobre libros donde encontrarás reseñas, recomendaciones y noticias del mundo literario. Descubre nuevas lecturas y comparte tus opiniones con otros amantes de los libros.">
+  <meta property="og:url" content="https://pre-entrega3-franz-34hk-l5swa8wwc-walter-wf.vercel.app/index.html">
+
+  <!-- Estilos CSS -->
   <link rel="stylesheet" href="../css/estilos.css">
+
+  <!-- Fuente de Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&family=Rubik&display=swap" rel="stylesheet">
+
+  <!-- Iconos de Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <title>Contacto</title>
+
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <script src="../script.js"></script>
+</head>
+
+
+
+
 </head>
 
 <body>
-  <!------------------------------------------------------------------------ Header ------------------------------------------------------------------------>
+  <!---------------------------------------------------------- Header -------------------------------------------------------------------------------------------->
   <header>
-    <img src="../img/logo.jpg" alt="logo">
-    <nav>
-      <ul class="nav">
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../pages/blog.html">Blog</a></li>
-        <li><a href="../pages/desafios.html">Desafíos</a></li>
-        <li><a href="../pages/lecturas.html">Lecturas</a></li>
-        <li><a href="../pages/contacto.html">Contacto</a></li>
-        <li class="social-icon"><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li>
-        <li class="social-icon"><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
-        <li class="social-icon"><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
-      </ul>
+    <!-- Usa las clases de Bootstrap para el navbar -->
+    <nav class="navbar navbar-expand-lg">
+      <a class="navbar-brand" href="#">
+        <button id="mode-toggle" class="mode-toggle"><i class="fas fa-sun"></i><i class="fas fa-moon"></i></button>
+  
+        <img src="../img/logo.jpg" alt="logo">
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="../index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/blog.html">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/desafios.html">Desafíos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/lecturas.html">Lecturas</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+          </li>
+        </ul>
+      </div>
+      <div class="social-icons">
+        <a class="social-icon" href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+        <a class="social-icon" href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a class="social-icon" href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+      </div>
+  
     </nav>
   </header>
   <!------------------------------------------------------------------------ Header ------------------------------------------------------------------------>
@@ -59,20 +106,9 @@
         </div>
       </div>
 
-      <!-- Card de Redes Sociales -->
-      <div class="card">
-        <div class="contenedor-redes">
-          <div class="redes-sociales">
-            <h2>Redes Sociales</h2>
-            <ul>
-              <li><a href="#"><img src="../img/fb.png" alt="Facebook"></a></li>
-              <li><a href="#"><img src="../img/tw.png" alt="Twitter"></a></li>
-              <li><a href="#"><img src="../img/insta.png" alt="Instagram"></a></li>
-            </ul>
+     
           </div>
-          <div class="cpyrght">
-            <p>&copy; 2023. Todos los derechos reservados.</p>
-          </div>
+          
         </div>
       </div>
     </div>
@@ -102,7 +138,7 @@
           <h3>Soy Lector</h3>
           <p>Elegi tener muchas vidas, no solo una.</p>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-6">
           <h3>Newsletter</h3>
           <form action="#" method="post">
             <input type="email" name="email" placeholder="Ingrese su correo electrónico" required>
