--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>SmartBook - Blog de Libros: Reseñas, Recomendaciones y Noticias Literarias</title>
-  <meta name="description"
+  <meta name="viewport"
     content="Bienvenido a SmartBook, un blog sobre libros donde encontrarás reseñas, recomendaciones y noticias del mundo literario. Descubre nuevas lecturas y comparte tus opiniones con otros amantes de los libros.">
   <meta name="keywords" content="libros, reseñas, recomendaciones, noticias literarias, lecturas, blog literario">
 
   <meta property="og:title" content="SmartBook - Blog de Libros">
   <meta property="og:description"
     content="Bienvenido a SmartBook, un blog sobre libros donde encontrarás reseñas, recomendaciones y noticias del mundo literario. Descubre nuevas lecturas y comparte tus opiniones con otros amantes de los libros.">
-  <meta property="og:url" content="https://pre-entrega3-franz-34hk-l5swa8wwc-walter-wf.vercel.app/index.html">
+  <meta property="og:url" content="">
 
   <!-- Estilos CSS -->
   <link rel="stylesheet" href="./css/estilos.css">
@@ -23,11 +23,10 @@
   <!-- Iconos de Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <script src="script.js"></script>
+  <script src="script.js"></script>
 </head>
 
 <!---------------------------------------------------------------------------------------- Header -------------------------------------------------------------------------------------------->
@@ -121,10 +120,11 @@
 
   <div class="contenedor-libro">
     <div class="titulo-libro">
-      <h1>Te Recomendamos</h1>
+      
     </div>
     <div class="contenido-libro">
-      <h1>Los Jardines de La Luna</h1>
+      <h1>Te Recomendamos</h1>
+      <h2>Los Jardines de La Luna</h2>
       <p class="texto-recomendado">Existen numerosas razas inteligentes humanas, humanoides y no humanas en el mundo de
         Malaz, divididas según su procedencia de cada una de las cuatro razas originales de los Forkrul Assail, Jaghut,
         K'Chain Che'Malle e Imass además de las razas Tiste invasoras: los Tiste Andii, Tiste Edur y Tiste Liosan.
