--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -40,7 +40,7 @@
   <header>
     <!-- Usa las clases de Bootstrap para el navbar -->
     <nav class="navbar navbar-expand-lg">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="/index.html">
         <button id="mode-toggle" class="mode-toggle"><i class="fas fa-sun"></i><i class="fas fa-moon"></i></button>
   
         <img src="../img/logo.jpg" alt="logo">
