--- a/pages/lecturas.html
+++ b/pages/lecturas.html
@@ -78,38 +78,46 @@
   <!------------------------------------------------------------------------ Header ------------------------------------------------------------------------>
 
   <!------------------------------------------------------------------------ Main ------------------------------------------------------------------------>
-  <section class="contenedor-principal-lecturas">
-    <div class="contenedor-lecturas">
-      <div class="entrada-lecturas">
-        <h2 class="titulo-lecturas">Steven Erickson</h2>
-        <p class="contenido-lecturas">Los jardines de la Luna (Gardens of the Moon) es una novela de
-          fantasía del autor canadiense Steven Erikson, siendo el primer volumen de la serie de Malaz: El
-          libro de los caídos.</p>
-        <a class="boton-leer-mas-lecturas" href="#">Leer mas</a>
-        <img src="../img/malaz.jpg" alt="El Libro de Malaz">
+ 
+  <div class="container">
+    <div class="row">
+      <!-- Primer Card -->
+      <div class="col-md-4">
+        <div class="card custom-card">
+          <img src="/img/malaz.jpg" class="card-img-fixed" alt="Jardines de la Lune">
+          <div class="card-body">
+            <h5 class="card-title">Los Jardines de la Luna</h5>
+            <p class="card-text">Novela de fantasía del autor canadiense Steven Erikson, siendo el primer volumen de la serie de Malaz: El libro de los caídos.</p>
+            <a href="#" class="btn btn-primary custom-btn">Leer más</a>
+          </div>
+        </div>
       </div>
-    </div>
-    <div class="contenedor-lecturas">
-      <div class="entrada-lecturas">
-        <h2 class="titulo-lecturas">Robert Jordan</h2>
-        <p class="contenido-lecturas">En su versión en inglés, La rueda del tiempo es una saga que preveía la
-          publicación de doce libros, de los cuales se habían publicado once en 2006. </p>
-        <a class="boton-leer-mas-lecturas" href="#">Leer mas</a>
-        <img src="../img/10092.jpg" alt="La Rueda Del Tiempo">
-      </div>
-    </div>
-    <div class="contenedor-lecturas">
-      <div class="entrada-lecturas">
-        <h2 class="titulo-lecturas">Resident Evil</h2>
-        <p class="contenido-lecturas">Resident Evil: Death Island es una próxima película japonesa de acción y terror
-          animada por computadora para adultos ambientada en el mismo universo que los videojuegos de Resident Evil.
-        </p>
-        <a class="boton-leer-mas-lecturas" href="#">Leer mas</a>
-        <img src="../img/evil.JPG" alt="ResidenT Evil">
 
+      <!-- Segundo Card -->
+      <div class="col-md-4">
+        <div class="card custom-card">
+          <img src="/img/10092.jpg" class="card-img-fixed" alt="Rueda De Tiempo">
+          <div class="card-body">
+            <h5 class="card-title">La Rueda Del Tiempo</h5>
+            <p class="card-text">La rueda del tiempo es una saga que preveía la publicación de doce libros, de los cuales se habían publicado once en 2006.</p>
+            <a href="#" class="btn btn-primary custom-btn">Leer más</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Tercer Card -->
+      <div class="col-md-4">
+        <div class="card custom-card">
+          <img src="/img/paz.jpg" class=" card-img-fixed" alt="Problema de la Paz">
+          <div class="card-body">
+            <h5 class="card-title">El Problema de la Paz</h5>
+            <p class="card-text">A pesar de los reveses sufridos, no hay nada que se interponga en el camino de Savine dan Glokta.</p>
+            <a href="#" class="btn btn-primary custom-btn">Leer más</a>
+          </div>
+        </div>
       </div>
     </div>
-  </section>
+  </div>
 
   <!------------------------------------------------------------------------ Main ------------------------------------------------------------------------>
 
